--- a/style.css
+++ b/style.css
@@ -1,17 +1,80 @@
-canvas {
-  width: 800px;
-  height: 800px;
-  border: 5px solid black;
-}
+@import "reset.css";
 
 body {
   display: flex;
-  justify-content: center;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: gainsboro;
+  margin: 10px 30px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+canvas {
+  width: 800px;
+  height: 800px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.color-options {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   align-items: center;
 }
 
 .color-option {
   width: 50px;
   height: 50px;
+  border-radius: 50%;
+  border: 5px solid white;
   cursor: pointer;
+  transition: transform ease-in-out 0.1s;
+}
+
+.color-option:hover {
+  transform: scale(1.2);
+}
+
+input#color {
+  background-color: white;
+}
+
+button,
+label {
+  all: unset;
+  padding: 10px 0;
+  text-align: center;
+  background-color: royalblue;
+  color: white;
+  font-weight: 500;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: opacity linear 0.1s;
+}
+
+button:hover {
+  opacity: 0.7;
+}
+
+input#file {
+  display: none;
+}
+
+input#text {
+  all: unset;
+  padding: 10px 0;
+  text-align: center;
+  border-radius: 20px;
+  font-weight: 500;
+  background-color: white;
+  font-size: 10px;
 }
